<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/ui_header">

        <ListPreference
            app:defaultValue="system"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="full"
            app:entries="@array/player_entries"
            app:entryValues="@array/player_values"
            app:key="player"
            app:title="@string/player_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="image_preview"
            app:title="@string/imagep_title"
            app:summaryOff="@string/imagep_summary_off"
            app:summaryOn="@string/imagep_summary_on" />

    </PreferenceCategory>

    <!-- PreferenceCategory app:title="@string/audiop_header">

        <SeekBarPreference
            app:key="nightcore_speed"
            app:title="@string/nights_title"
            app:showSeekBarValue="true"
            app:min="50"/>

    </PreferenceCategory>

    <EditTextPreference
        app:key="signature"
        app:title="@string/signature_title"
        app:useSimpleSummaryProvider="true" /-->

</PreferenceScreen>