<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegisterFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/googlesans"
        android:text="@string/signup"
        android:textColor="@color/titleText"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_zrytezene"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toTopOf="@id/til2"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:singleLine="true"
            android:textColor="@color/titleText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toTopOf="@id/til3"
        app:layout_constraintEnd_toEndOf="@id/til1"
        app:layout_constraintStart_toStartOf="@id/til1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:singleLine="true"
            android:textColor="@color/titleText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toTopOf="@id/til4"
        app:layout_constraintEnd_toEndOf="@id/til2"
        app:layout_constraintStart_toStartOf="@id/til2"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/titleText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toTopOf="@+id/button_continue"
        app:layout_constraintEnd_toEndOf="@id/til3"
        app:layout_constraintStart_toStartOf="@id/til3"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repassword"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/titleText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/textView3"
        tools:text="@string/signup" />

</androidx.constraintlayout.widget.ConstraintLayout>